<resources>
    <string name="app_name">AESKGO</string>
    <string name="EnterYourEmailandPasswordDefinition" translatable="false">E-posta adresinizi ve şifrenizi girin</string>
    <string name="EmailDefinition" translatable="false">Sadece yildiz.edu.tr uzantılı mail adresinizi ekleyin</string>
    <string name="email">ad@std.yildiz.edu.tr</string>
    <string name="password" translatable="false">şifre</string>
    <string name="continuetoprocess">Devam Edin</string>
    <string name="name">ad</string>
    <string name="surname">soyad</string>
    <string name="createyouraccount">Profilinizi oluşturun</string>
    <string name="creatingaccountdefiniton">Ad ve Soyadınızı sonradan değiştirilmemektedir</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="SelectYourVehicle">Aracınızı Seçiniz</string>
    <string name="YouCanStartWithSelectedVehicled">Seçtiğiniz araç ile yolculuğa başlayabilirsiniz</string>
    <string name="sign_in">Giriş Yap</string>
    <string name="sign_up">Üye Ol</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="phoneNumber">telefon numaranız</string>

</resources>