<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".views.fragments.signin.SignInPageFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="26dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginBottom="16dp"
            android:text="@string/createyouraccount"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="40dp"
            android:text="@string/creatingaccountdefiniton"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/plaintext_background"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:paddingLeft="12dp"
            android:paddingTop="12dp"
            android:paddingRight="4dp"
            android:paddingBottom="12dp" />

        <EditText
            android:id="@+id/userSurname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/plaintext_background"
            android:ems="10"
            android:hint="@string/surname"
            android:inputType="textPersonName"
            android:paddingLeft="12dp"
            android:paddingTop="12dp"
            android:paddingRight="4dp"
            android:paddingBottom="12dp" />
        <EditText
            android:id="@+id/userPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:background="@drawable/plaintext_background"
            android:ems="10"
            android:hint="@string/phoneNumber"
            android:inputType="textPersonName"
            android:paddingLeft="12dp"
            android:paddingTop="12dp"
            android:paddingRight="4dp"
            android:paddingBottom="12dp" />


        <Button
            android:id="@+id/continueButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:text="@string/continuetoprocess" />

    </LinearLayout>

</FrameLayout>